Fix sidebar responsive sizing and duplicate display issues - Implemented global instance tracking to prevent sidebar duplication - Added responsive sizing with Preferred size policy and dynamic width adjustment - Enhanced sidebar integration with cohesive system operation - Fixed window resize event handling for real-time sidebar adjustment - Added setPreferredWidth method and sizeHint override for proper sizing - Implemented comprehensive cleanup and duplicate prevention mechanisms - Updated dashboard to use responsive splitter configuration - Added system integration status tracking and monitoring

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ wheels/
 venv/
 env/
 ENV/
+.venv/
 
 # IDE
 .vscode/
@@ -39,6 +40,7 @@ logs/
 test_report.json
 .coverage
 htmlcov/
+.pytest_cache/
 
 # Build artifacts
 build/
@@ -56,3 +58,6 @@ cleanup_*.py
 # Large executable files
 *.exe
 DupeZ.exe
+
+# Temporary
+temp/
