--- a/app/config/settings.json
+++ b/app/config/settings.json
@@ -12,7 +12,7 @@
   "connection_limit": 100,
   "suspicious_activity_threshold": 20,
   "block_duration": 30,
-  "theme": "hacker",
+  "theme": "rainbow",
   "auto_refresh": false,
   "refresh_interval": 60,
   "show_device_icons": true,
